# alicia-launcher-qt

./: .gitignore  CMakeLists.txt  README.MD
.github/workflows/: build.yml  cmake-single-platform.yml  publish.yml
src/: GameStartWidget.cpp  Launcher.cpp  MasterWidget.cpp  MasterWindow.cpp  ProgressDialog.cpp  Window.cpp  launcher.cpp  main.cpp  util.cpp  window.cpp
src/include/: GameStartWidget.hpp  Launcher.hpp  MasterWidget.hpp  MasterWindow.hpp  ProgressDialog.hpp  Window.hpp  launcher.hpp  util.hpp  window.hpp
src/res/: LauncherForm.ui  LauncherWidget.ui  LoginForm.ui  LoginWidget.ui  MasterFrame.ui  MasterWindow.ui  MenuWidget.ui  ProgressWidget.ui  master.qrc
tests/: CMakeLists.txt  launcher_test.cpp
